--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ nav img:hover {
         display:flex;
         flex-direction: column;
         align-items: center;
+        padding: 1em;
     }
     .header-container {
         max-width:90%;
@@ -111,7 +112,10 @@ nav img:hover {
         padding-top: 0;
     }
     .header-container h1 {
-        font-size: 3rem;
+        font-size: 1rem;
+    }
+    .header-container p {
+        font-size: 0.7rem;
     }
     .portrait {
         max-width: 70%;
