--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ Typography
 
 .header-container h1 {
     color:white;
-    font-size: 3rem;
+    font-size: 4rem;
 }
 p {
     color:white;
@@ -30,21 +30,41 @@ Layout
     margin: 0 auto;
     display:flex;
     padding: 3em 0;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
 
 }
 
 .header-container {
+    text-align: center;
+    max-width: 36em;
+}
+.subscribe {
+    max-width: 7em;
+    font-size: 2.5rem;
+    background-color:rgb(101, 183, 183);
+    border: none;
+    text-decoration: none;
+    border-radius: 12px;
+    padding: .35em;
+    cursor:pointer;
+    box-shadow: 0px 0px 10px rgb(2, 2, 2);
+}
 
-    max-width: 20em;
+.subscribe:hover {
+    background-color:rgb(82, 149, 149);
 }
 .portrait-container {
     position:relative;
 }
 .portrait {
     max-width: 35%;
+    box-shadow: 0px 0px 8px rgb(101, 183, 183);
 }
-
+.clickable:hover {
+    box-shadow: 0px 0px 16px rgb(101, 183, 183);
+    cursor: pointer;
+}
 .portrait-container button {
     position: absolute;
     bottom:50%;
@@ -63,12 +83,19 @@ Layout
     margin: 0 auto;
     display:flex;
     justify-content: center;
+    margin:-3em 0;
 }
 /* ======================================
 Nav bar
 ======================================== */
+nav {
+    max-width: 1000px;
+    width: 90vw;
+    margin: auto;
 
+}
 nav ul {
+
     margin: 0;
     padding: 1.7em;
     display:flex;
@@ -111,6 +138,21 @@ nav img:hover {
     gap: 20em;
 }  
 
+/* ======================================
+About
+======================================== */
+.description {
+    min-width: 70vw;
+    display:flex;
+}
+.description p {
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+/* ======================================
+Media queries
+======================================== */
 @media (max-width:680px) {
     .container {
         display:flex;
@@ -123,7 +165,6 @@ nav img:hover {
         display:flex;
         flex-direction: column;
         text-align: center;
-
     }
     .header-container h1 {
         font-size: 2rem;
@@ -140,17 +181,26 @@ nav img:hover {
         align-items: center;
         gap:2.5em;
     }
+    .pet-count {
+        width:90vw;
+        max-width: 1000px;
+        margin: 0 auto;
+        display:flex;
+        justify-content: center;
+        margin-top:-1.7em;
+    }
+    .description p {
+        text-align: center;
+        font-size: 1.5rem;
+    }
+    .subscribe {
+        max-width: 6em;
+        font-size: 2rem;
+        background-color:rgb(101, 183, 183);
+        border: none;
+        text-decoration: none;
+        border-radius: 12px;
+        padding: .35em;
+        cursor:pointer;
+    }
 } 
-/* ======================================
-Footer
-======================================== */
-
-.github-link {
-    font-size: 24px;
-    
-  }
-.container-footer a {
-    text-decoration: none;
-    
-    color:black;
-}
