--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ Layout
     max-width: 36em;
 }
 .subscribe {
+    color:black;
     max-width: 7em;
     font-size: 2.5rem;
     background-color:rgb(101, 183, 183);
@@ -48,7 +49,7 @@ Layout
     border-radius: 12px;
     padding: .35em;
     cursor:pointer;
-    box-shadow: 0px 0px 10px rgb(2, 2, 2);
+
 }
 
 .subscribe:hover {
