--- a/styles2.css
+++ b/styles2.css
@@ -14,13 +14,17 @@ Typography
     color:white;
 }
 
-p {
+.sign-in p {
     font-size: 2rem;
     color: white;
 }
-a {
+p a {
     text-decoration: none;
     color:rgb(101, 183, 183);
+}
+h1 a {
+    color: rgb(152, 151, 143);
+    text-decoration: none;
 }
 
 /* ============== 
@@ -87,4 +91,35 @@ input:focus {
     box-shadow: 0px 0px 10px rgb(101, 183, 183);
 }
 
+/* ============== 
+Mediq Queries
+================= */
+@media (max-width: 680px) {
+    .container {
+        width: 90vw;
+        min-width: none;
+    }
+    .portrait {
+        width: 100%;
+    }
+    .col1{
+        width:100vw;
+        opacity: 0.2;
+    }
+    .col2 {
+        position: absolute;
+    }
+    .sign-up{
+        flex-direction: column;
+
+        gap:0;
+    }
+    input {
+        width: 70vw;
+    }
+    .sign-in {
+        margin-top: -1em;
+    }
+
+}
 
