--- a/styles2.css
+++ b/styles2.css
@@ -31,8 +31,7 @@ h1 a {
 Layout
 ================= */
 .container {
-    width: 100vw;
-    min-width: 900px;
+    max-width: 100vw;
     display:flex;
 }
 
@@ -48,7 +47,6 @@ Layout
 }
 .portrait {
     width: 30vw;
-    min-width: 400px;
     opacity:.7;
 }
 .textContainer {
@@ -111,15 +109,28 @@ Mediq Queries
     }
     .sign-up{
         flex-direction: column;
-
-        gap:0;
+        gap: 0;
+        margin-top: -2em;
     }
-    input {
+    input,
+    label {
         width: 70vw;
+        margin-top:-1em;
     }
     .sign-in {
         margin-top: -1em;
     }
-
+    .textContainer h1 {
+        font-size: 1.7rem;
+    }
+    .createAcc {
+        font-size: 1.2rem;
+        background-color:rgb(101, 183, 183);
+        border: none;
+        text-decoration: none;
+        border-radius: 12px;
+        padding: .75em;
+        color: black;
+    }
 }
 
